# llm_zoomcamp_2024_project

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  api.py  dataprep.py  llm.py  requirements.txt
frontend/: Dockerfile  app.py  requirements.txt
notebook/: evaluation.ipynb  generate_evaluation.ipynb  mentalhealth_chroma.ipynb  mentalhealth_elastic.ipynb
